fixed uneven stuff on index

--- a/cssFiles/home.css
+++ b/cssFiles/home.css
@@ -46,7 +46,7 @@
 
 .motivation-img {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .motivation-card {
